Finally; Added pictureUpload.html, upload.js and uploadProcess.php for picture upload function

--- a/frontend/static/html/profile.html
+++ b/frontend/static/html/profile.html
@@ -61,14 +61,12 @@
     </nav>
     </header>
 
-        <div id="profile-picture">
-        </div>   
+    <div id="profile-picture"></div>
         <div id="upload-picture" align="center">
            <span title="Upload picture"> <button id="uploadButton">+</button>  </span>
         </div>
-    <div id="usernamefield">
+    <div id="usernamefield"></div>
 
-    </div>
 <script>
     window.onload = function () {
 
