--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -258,25 +258,24 @@
 <!--/row-->
 
   <script>
-      /*function newpicbox() {
-      var img1_src = "./images/LA.jpg";
-      var img2_src = "./images/mountains1.jpg";
-      var img3_src = "./images/mountains2.jpg";
-      var img4_src = "./images/sean-o-406693-unsplash.jpg";
-      var img5_src = "./images/tree.jpg";
+      // Fisher-Yates shuffle algorithm
+          function shuffle(array) {
+          var currentIndex = array.length, temporaryValue, randomIndex;
 
-      var picturebox1 = document.getElementById('image1');
-      var picturebox2 = document.getElementById('image2');
+          // While there remain elements to shuffle...
+          while (0 !== currentIndex) {
 
+              // Pick a remaining element...
+              randomIndex = Math.floor(Math.random() * currentIndex);
+              currentIndex -= 1;
 
-      var box1 = [img1_src,img2_src,img3_src,img4_src,img5_src,''];
-
-          box1.length = box1.length - 1;
-          picturebox1.innerHTML = "<img src='"+img1_src+"' alt='my image'>"; //+box1[1]+
-
-      }*/
-
-
+              // And swap it with the current element.
+              temporaryValue = array[currentIndex];
+              array[currentIndex] = array[randomIndex];
+              array[randomIndex] = temporaryValue;
+          }
+          return array;
+      }
 
       var userID;
       userID = cookiewerteHolen();
@@ -292,6 +291,7 @@
           if (xmlhttpr.readyState == XMLHttpRequest.DONE) {
               var json = xmlhttpr.responseText;
                photos = JSON.parse(json);
+               photos = shuffle(photos);
              //var picamount = (Object.keys(photos).length);
               // alert (pictureNumber);
               // alert(photo[0].title);
@@ -306,6 +306,8 @@
           }
       };
 
+
+
         var clicks = -1;
           function changepic1 () {
               clicks++;
@@ -316,9 +318,11 @@
               photos.shift();
               alert('photos left: '+(Object.keys(photos).length + 1)+ ' Anzahl clicks für pic2: ' + clicks);
               }
-              else {
+              else { //Keine Bilder mehr in Array!
                   clicks++;
                   alert('photos left: '+(Object.keys(photos).length)+ ' Anzahl clicks für pic2: ' + clicks);
+                  document.getElementById("image1").onclick = '';
+                  document.getElementById("image2").onclick = '';
                   alert('no pics left!');
               }
           }
@@ -331,9 +335,11 @@
               photos.pop();
               alert('photos left: '+(Object.keys(photos).length +1)+ ' Anzahl clicks für pic1: ' + clicks);
               }
-              else {
+              else {  //Keine Bilder mehr in Array!
                   clicks++;
                   alert('photos left: '+(Object.keys(photos).length)+ ' Anzahl clicks für pic2: ' + clicks);
+                  document.getElementById("image1").onclick = '';
+                  document.getElementById("image2").onclick = '';
                   alert('no pics left!');
               }
           }
