help button register fixed

--- a/frontend/static/html/index.html
+++ b/frontend/static/html/index.html
@@ -34,13 +34,13 @@
 </button>
 </div>
 
-<!-- creates Help button register-->
+<!-- creates Help button register
 <div id="helpRe">
     <button class="helpRe">Help
     <span class="helpText"> Please enter the required information and click on the "Create Account" button to register.
 </span>
 </button>
-</div>
+</div>-->
 
 <!-- creates basic login-form -->
 <div id="container">
@@ -152,6 +152,12 @@ function checkNotEmpty(usernamel,passwordl) {
         <input type="password" id="confpassword" name="confpassword" placeholder="Confirm Password">
         <div id="lower2">
             <input type="submit" value="Create account" onclick="registerUser()" >
+
+            <button class="helpRe">Help
+                <span class="helpText"> Please enter the required information and click on the "Create Account" button to register.
+                </span>
+            </button>
+
         </div>
     </form>
 </div>
