--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -12,16 +12,16 @@
     <script type=text/javascript src = "navbarFunction.js"></script>
     <script type=text/javascript src = "compare.js"></script>
     <meta http-equiv="Content-Type" content="text/html; charset= utf-8" />
-    <!--  <script src="jquery-3.3.1.min.js"></script> -->
-  </head>
+    <script src="jquery-3.3.1.min.js"></script>
+</head>
 
-  <body>
+<body>
 
 
-  <header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
-      <nav role="navigation" >
-          <div class="container-fluid" >
-              <!-- Brand and toggle get grouped for better mobile display -->
+<header class="navbar navbar-inverse navbar-fixed-top navbar-custom">
+    <nav role="navigation" >
+        <div class="container-fluid" >
+            <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
                     <span class="sr-only">Toggle navigation</span>
@@ -68,28 +68,23 @@
         <div class="col-sm-3 sidebar-offcanvas" id="sidebar" role="navigation">
             <div class="sidebar-nav">
                 <ul class="nav">
-                    <h1>Shootouts</h1>
+                    <header>Shootouts</header>
                     <br>
                     <button type="button" id="create_shootout" onclick="openModal()">Create shootout</button>
                     <div class="form-group" id="search_shootout">
                         <input  type="text" class="form-control" placeholder="Search">
-                    </div >
-
-                    <table id="shootoutstable">
-                        <!--/ Inhalt wird dynamisch geladen! -->
-                    </table>
-                                            <!--/  <li class="active"><a href="#">Link</a></li>
-                                              <li><a href="#">Link</a></li>
-                                              <li><a href="#">Link</a></li>
-                                              <li><a href="#">Link</a></li>
-                                              <li><a href="#">Link</a></li>
-                                              <li><a href="#">Link</a></li>
-                                              <li><a href="#">Link</a></li>
-                                              <li><a href="#">Link</a></li> -->
-                  </ul>
-
-              </div>
-              <!--/.well -->
+                    </div>
+                    <li class="active"><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                    <li><a href="#">Link</a></li>
+                </ul>
+            </div>
+            <!--/.well -->
         </div>
         <!--/span-->
     <!-- Modal popup Shootout -->
@@ -103,10 +98,9 @@
                     <form>
                         <label for="nameShootout">Name</label>
                         <input type="text" id="nameShootout">
-                        <p></p>
-                        <label for="nameShootout">Shootout ID</label>
                         <p>
-                        </p><select>
+                        </p>
+                        <select>
                         <option> private </option>
                         <option> public</option>
                     </select>
@@ -121,38 +115,6 @@
         </div>
 
         <script>
-            //Ausgabe der Liste aller Shootouts in der Sidebar
-
-            window.onload = function () {
-
-                if (document.cookie === ""){
-                    window.location.replace("http://localhost:8080/index.html");
-                }
-                var xmlhttpsidebar = new XMLHttpRequest ();
-
-                xmlhttpsidebar.open("GET", 'http://localhost:8080/meetme/api/shootout/', true);
-                xmlhttpsidebar.setRequestHeader("Content-Type", "application/json"); //?
-                xmlhttpsidebar.send(null);
-
-                xmlhttpsidebar.onreadystatechange = function (){
-                    if(xmlhttpsidebar.readyState == XMLHttpRequest.DONE){
-                        var json = xmlhttpsidebar.responseText;
-                        var shootoutData = JSON.parse(json);
-                        var anzahlShootouts=(Object.keys(shootoutData).length);
-                        var shootouttable = document.getElementById("shootoutstable");
-                        for (var i = 0; i < anzahlShootouts; i++){
-
-                            shootouttable.innerHTML += "<tr>" +
-                               "<li>" + "<a href ='#' id='td1\" + i +\"'/>" + shootoutData[i].name + "</a>"+ "</li>" +
-                                "</tr>";
-                        }
-
-                    }
-
-                }
-            };
-
-
             function cookiewerteHolen () {
                 var Wert = "";
                 if (document.cookie) {
@@ -184,7 +146,7 @@
                 modal.style.display = "none";
             }
             //var die beim klicken auf Btn "Create Shootout
-            var closeCS = document.getElementById("createShootout")[0];
+            var closeCS= document.getElementById("createShootout")[0];
             closeCS.onclick= function(){
                 modal.style.display="none";
             }
@@ -195,12 +157,9 @@
                     modal.style.display = "none";
                 }
             }
+            var userID=cookiewerteHolen();
 
             function createShootout(){
-                var userID;
-                userID = cookiewerteHolen();
-
-
                 if (document.cookie) {
                 var nameShootout=document.getElementById("nameShootout").value;
                 var xmlhttp = new XMLHttpRequest();
@@ -210,20 +169,12 @@
                 //sent the new HttpRequest
                 xmlhttp.send(JSON.stringify({
                     "shootoutName": nameShootout,
-                    "userid": userID
-                }));
-                    //modal.style.display="none";
-
-                }
-
+                    "userid":userID
+                }));}
                 else {
-                    window.location.replace("http://localhost:8080/index.html");
+                    alert('user unknown');
                 }
-                modal.style.display="none";
-                //nameShootout.innerHTML += ""; noch zeile schreiben, damit textbox leer wird
-
             }
-
 
 
         </script>
@@ -237,18 +188,14 @@
         </header>
 
         <!-- Bildervergleich -->
-
-
-
-
         <div class="container" id="image_container">
             <div class="col-sm-4 column1">
-                <img class="img-auto" id="image1" src="" alt="no picture uploaded" style="width:100%" height="300px" width="300px" onclick="changepic2()">
+                <img class="img-auto" id="image1" src="./images/mountains1.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px" onclick="newpicbox()">
 
             </div>
 
             <div class="col-sm-4 column2">
-                <img class="img-auto" id="image2" src="" alt="no picture uploaded" style="width:100%" height="300px" width="300px" onclick="changepic1()">
+                <img class="img-auto" id="image2" src="./images/mountains2.jpg" alt="no picture uploaded" style="width:100%" height="300px" width="300px">
             </div>
         </div>
 
@@ -256,103 +203,48 @@
     <!--/span-->
 </div>
 <!--/row-->
+<script>
+    function newpicbox() {
+    var img1_src = "./images/LA.jpg";
+    var img2_src = "./images/mountains1.jpg";
+    var img3_src = "./images/mountains2.jpg";
+    var img4_src = "./images/sean-o-406693-unsplash.jpg";
+    var img5_src = "./images/tree.jpg";
 
-  <script>
-      // Fisher-Yates shuffle algorithm
-          function shuffle(array) {
-          var currentIndex = array.length, temporaryValue, randomIndex;
-
-          // While there remain elements to shuffle...
-          while (0 !== currentIndex) {
-
-              // Pick a remaining element...
-              randomIndex = Math.floor(Math.random() * currentIndex);
-              currentIndex -= 1;
-
-              // And swap it with the current element.
-              temporaryValue = array[currentIndex];
-              array[currentIndex] = array[randomIndex];
-              array[randomIndex] = temporaryValue;
-          }
-          return array;
-      }
-
-      var userID;
-      userID = cookiewerteHolen();
-      if (userID === "") {
-          alert('undefined User!');
-      }
-      var photos;
-      var xmlhttpr = new XMLHttpRequest();
-      xmlhttpr.open("GET", "http://localhost:8080/meetme/api/photo/" + userID);
-      xmlhttpr.send(null);
-
-      xmlhttpr.onreadystatechange = function () {
-          if (xmlhttpr.readyState == XMLHttpRequest.DONE) {
-              var json = xmlhttpr.responseText;
-               photos = JSON.parse(json);
-               photos = shuffle(photos);
-             //var picamount = (Object.keys(photos).length);
-              // alert (pictureNumber);
-              // alert(photo[0].title);
-
-              // ------ load fist pic for image1 ---------------------
-              document.getElementById("image1").src = photos[0].picture;
-              photos.shift();
-              // ------ load fist pic for image2 --------------------
-              var lastpic = (Object.keys(photos).length)-1;
-              document.getElementById("image2").src = photos[lastpic].picture;
-              photos.pop();
-          }
-      };
+    var picturebox1 = document.getElementById('image1');
+    var picturebox2 = document.getElementById('image2');
 
 
+    var box1 = [img1_src,img2_src,img3_src,img4_src,img5_src,''];
 
-        var clicks = -1;
-          function changepic1 () {
-              clicks++;
-              var arraylength = (Object.keys(photos).length);
+        box1.length = box1.length - 1;
+        picturebox1.innerHTML = "<img src='"+img1_src+"' alt='my image'>"; //+box1[1]+
 
-              if (arraylength !== 0){
-              document.getElementById("image1").src = photos[0].picture;
-              photos.shift();
-              alert('photos left: '+(Object.keys(photos).length + 1)+ ' Anzahl clicks für pic2: ' + clicks);
-              }
-              else { //Keine Bilder mehr in Array!
-                  clicks++;
-                  alert('photos left: '+(Object.keys(photos).length)+ ' Anzahl clicks für pic2: ' + clicks);
-                  document.getElementById("image1").onclick = '';
-                  document.getElementById("image2").onclick = '';
-                  alert('no pics left!');
-              }
-          }
-          function changepic2 () {
-              clicks++;
-              var arraylength = (Object.keys(photos).length);
-              if (arraylength !== 0){
-              var lastpic = (Object.keys(photos).length)-1;
-              document.getElementById("image2").src = photos[lastpic].picture;
-              photos.pop();
-              alert('photos left: '+(Object.keys(photos).length +1)+ ' Anzahl clicks für pic1: ' + clicks);
-              }
-              else {  //Keine Bilder mehr in Array!
-                  clicks++;
-                  alert('photos left: '+(Object.keys(photos).length)+ ' Anzahl clicks für pic2: ' + clicks);
-                  document.getElementById("image1").onclick = '';
-                  document.getElementById("image2").onclick = '';
-                  alert('no pics left!');
-              }
-          }
-
-      changepic1(); //set first Pic on page
-      changepic2(); //set first Pic on page
-
-      // picturebox2.innerHTML = "<img src='"+img_src+"' alt='my image'>";
-      // var box2 = [img1_src,img2_src,img3_src,img4_src,img5_src];
+    }
 
 
-  </script>
+/*
+    alert('getpictures started')
+    var id = "34";
+    var xmlhttpr = new XMLHttpRequest();
+    xmlhttpr.open("GET", "http://localhost:8080/meetme/api/photo/34");
+    xmlhttpr.send(null);
 
+        xmlhttpr.onreadystatechange = function () {
+            if (xmlhttpr.readyState == XMLHttpRequest.DONE) {
+            var response2 = xmlhttpr.responseText;
+            var photo = JSON.parse(response2);
+            var pictureNumber = (Object.keys(photo).length);
+            alert (pictureNumber);
+            alert(photo[0].title);
+
+
+                picturebox2.innerHTML = "<img src='"+img_src+"' alt='my image'>";
+                var box2 = [img1_src,img2_src,img3_src,img4_src,img5_src];
+            }*/
+
+
+</script>
 <!--Help button-->
 <button class="helpBtn1">Help
     <span class="helpText">Please click on the picture you like more to participate in this shootout. <br>
