help button update

--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -110,6 +110,11 @@
                         <option> private </option>
                         <option> public</option>
                     </select>
+                        <button class="helpBtn5">Help
+                            <span class="helpText">Please enter the name of your new shootout.  <br>
+                                        If you want to share this shootout with everyone select "public" below.
+                            </span>
+                        </button>
 
                     </form>
                 </div>
@@ -357,7 +362,7 @@
 <button class="helpBtn1">Help
     <span class="helpText">Please click on the picture you like more to participate in this shootout. <br>
     To participate in another shootout select one on the left. Click on the button "Create Shootout" to create your own
-    new shootout.
+    new shootout. To see the ranking please click on "Shootout Ranking" in the navigation bar.
     </span>
 </button>
 
