--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -63,7 +63,8 @@
     </header>
 
     <div id="ShootoutÜbersicht">
-        <tr>
+        <h2 id="caption">Take a look at a shootout!</h2>
+        <table>
         <tr>
             <th id="spalte">Shootout-Name</th>
             <th id="spalte">Topic</th>
@@ -78,6 +79,11 @@
             <td>Coffee</td>
             <td>Food</td>
             <td><a href="ShootoutRanking.html">Picture ranking</a></td>
+        </tr>
+        <tr>
+            <td>Make up</td>
+            <td>Beauty</td>
+            <td>Picture ranking</td>
         </tr>
 
         </table>
