--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -64,6 +64,9 @@
 
     <div id="ShootoutÜbersicht">
         <h2 id="caption">Take a look at a shootout!</h2>
+        <div class="form-group" id="search_shootout">
+            <input  type="text" class="form-control" placeholder="Search">
+        </div >
         <table>
         <tr>
             <th id="spalte">Shootout-Name</th>
