--- a/frontend/static/html/shootoutÜbersicht.html
+++ b/frontend/static/html/shootoutÜbersicht.html
@@ -67,7 +67,7 @@
         <div class="form-group" id="search_shootout">
             <input  type="text" class="form-control" placeholder="Search">
         </div >
-        <table>
+        <table align="center">
         <tr>
             <th id="spalte">Shootout-Name</th>
             <th id="spalte">Topic</th>
