added AGB.html to all pages

--- a/frontend/static/html/shootoutRanking.html
+++ b/frontend/static/html/shootoutRanking.html
@@ -56,7 +56,7 @@
                   <ul id="dropdown" class="dropdown-menu" aria-labelledby="dropdownMenu1">
                       <li><a href="allusers.html">All Users</a></li>
                       <li><a href="#">Help</a></li>
-                      <li><a href="#">AGB's</a></li>
+                      <li><a href="AGB.html">AGB's</a></li>
                       <li role="separator" class="divider"></li>
                       <li><a href="#">Sign out</a></li>
                   </ul>
