--- a/frontend/static/html/compare.html
+++ b/frontend/static/html/compare.html
@@ -252,12 +252,12 @@ function createshootoutlist() {
 
         <div class="container" id="image_container">
             <div class="col-sm-4 column1">
-                <img class="img-auto" id="image1" src="" alt="no picture uploaded" style="width:100%" height="300px" width="300px" title="" onclick="changepic2()">
+                <img class="img-auto" id="image1" src=""  style="width:100%" height="300px" width="300px" title="" onclick="changepic2()">
 
             </div>
 
             <div class="col-sm-4 column2">
-                <img class="img-auto" id="image2" src="" alt="no picture uploaded" style="width:100%" height="300px" width="300px" title="" onclick="changepic1()" >
+                <img class="img-auto" id="image2" src=""  style="width:100%" height="300px" width="300px" title="" onclick="changepic1()" >
             </div>
         </div>
 
@@ -269,7 +269,7 @@ function createshootoutlist() {
   <script>
 
       //--------------------------------------------------------
-
+//alt="no picture uploaded"
 var photos;
 function starttheshow (personID){
     // Fisher-Yates shuffle algorithm
@@ -345,7 +345,7 @@ function starttheshow (personID){
             //gewinner ist bild 2
             var photoid = document.getElementById("image2").title;
 
-            /*xmlhttp.open("POST", "http://localhost:8080/meetme/api/person");
+            /*xmlhttp.open("POST", "http://localhost:8080/meetme/api/person/wins");
               xmlhttp.setRequestHeader("Content-Type", "application/json");
               //sent the new HttpRequest
               xmlhttp.send(JSON.stringify({
