--- a/frontend/static/html/pictureUpload.html
+++ b/frontend/static/html/pictureUpload.html
@@ -1,22 +1,76 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
-    <title>Upload Files</title>
-
-</head>
+<!DOCTYPE HTML>
+<!-- <form id="file-form" action="handler.php" method="POST">
+    <input type="file" id="file-select" name="photos[]" multiple/>
+    <button type="submit" id="upload-button">Upload</button>
+</form> -->
 
 <body>
-<form method="post" enctype="multipart/form-data">
-    <input type="file" name="files[]" multiple>
-    <input type="submit" value="Upload File" name="submit">
+<h1>File Upload with Jersey</h1>
+
+<form action="http://localhost:8080/meetme/api/photo/upload" method="POST" enctype="multipart/form-data">
+    <p>Select a file : <input type="file" name="file" size="45"/></p>
+    <input type="submit" value="Upload It" />
 </form>
 
-<script src="upload.js"></script>
 </body>
+<!--
+<script>
+    var form = document.getElementById('file-form');
+    var fileSelect = document.getElementById('file-select');
+    var uploadButton = document.getElementById('upload-button');
 
-</html>
+    form.onsubmit = function(event) {
+        event.preventDefault();
+
+        // Update button text.
+        uploadButton.innerHTML = 'Uploading...';
+
+        // Get the selected files from the input.
+        var files = fileSelect.files;
+
+        // Create a new FormData object.
+        var formData = new FormData();
+
+        // Loop through each of the selected files.
+        for (var i = 0; i < files.length; i++) {
+            var file = files[i];
+
+            // Check the file type.
+            if (!file.type.match('image.*')) {
+                continue;
+            }
+
+            // Add the file to the request.
+            formData.append('photos[]', file, file.name);
+        }
+
+        // Files
+        formData.append(name, file, file.name);
+
+        //// Blobs
+        //formData.append(name, blob, file.name);
+
+        // Strings
+        //formData.append(name, value);
+
+        // Set up the request.
+        var xhr = new XMLHttpRequest();
+
+        // Open the connection.
+        xhr.open("POST", "http://localhost:8080/meetme/api/photo", true);
+        xhr.setRequestHeader("Content-Type", "multipart/form-data");
+
+        // Set up a handler for when the request finishes.
+        xhr.onload = function () {
+            if (xhr.status === 200) {
+                // File(s) uploaded.
+                uploadButton.innerHTML = 'Upload';
+            } else {
+                alert('An error occurred!');
+            }
+        };
+
+        // Send the Data.
+        xhr.send(formData);
+    }
+</script> -->
