--- a/frontend/static/html/allphotos.html
+++ b/frontend/static/html/allphotos.html
@@ -99,7 +99,7 @@
                 var photolist = JSON.parse(json);
                 alert (json);
                 alert (photolist[0].name);
-                anzahluser=(Object.keys(photolist).length)
+                anzahluser=(Object.keys(photolist).length);
 
 
                 for (var i = 0; i < anzahluser; i++) {
